2011-10-21  Jan Hubicka  <jh@suse.cz>

	* cgraph.c (dump_cgraph_node): Dump alias flag.
	* cgraphunit.c (handle_alias_pairs): Handle weakrefs with no destination.
	(get_alias_symbol): New function.
	(output_weakrefs): Output also weakrefs with no destinatoin.
	(lto_output_node): Output weakref alias flag when at function boundary.

2011-10-21  Andrew Stubbs  <ams@codesourcery.com>

	PR target/50809

	* config/arm/driver-arm.c (vendors): Make static.

2011-10-21  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.c (ix86_emit_swdivsf): Force b into register.
	(ix86_emit_swsqrtsf): Force a into register.

2011-10-20  Mike Stump  <mikestump@comcast.net>

	* regcprop.c (copyprop_hardreg_forward_1): Update recog_data
	after validate_change wipes it out.

2011-10-20  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	* config/spu/spu.md ("vec_permv16qi"): Reduce selector modulo 32
	before using the shufb instruction.

2011-10-20  Kirill Yukhin  <kirill.yukhin@intel.com>

	PR target/50766
	* config/i386/i386.md (bmi_bextr_<mode>): Update register/
	memory operand order.
	(bmi2_bzhi_<mode>3): Ditto.
	(bmi2_pdep_<mode>3): Ditto.
	(bmi2_pext_<mode>3): Ditto.

2011-10-20  Richard Henderson  <rth@redhat.com>

	* target.def (vec_perm_const_ok): Rename from builtin_vec_perm_ok.
	* optabs.c (can_vec_perm_expr_p): Update to match.
	(expand_vec_perm_expr): Likewise.
	* config/i386/i386.c (TARGET_VECTORIZE_VEC_PERM_CONST_OK): Rename
	from TARGET_VECTORIZE_BUILTIN_VEC_PERM_OK.
	* doc/tm.texi.in: Likewise.

2011-10-20  Sergey Ostanevich  <sergos.gnu@gmail.com>

	PR target/50572
	* config/i386/i386.c (processor_target_table): Change Atom
	align_loops_max_skip to 15.

2011-10-20  Richard Henderson  <rth@redhat.com>

	* target.def (builtin_vec_perm): Remove.
	* doc/tm.texi.in (TARGET_VECTORIZE_BUILTIN_VEC_PERM): Remove.

	* config/i386/i386.c (ix86_expand_vec_perm_builtin): Remove.
	(IX86_BUILTIN_VEC_PERM_*): Remove.
	(bdesc_args): Remove vec_perm builtins
	(ix86_expand_builtin): Likewise.